--- a/Week 4/weatherapp-es6/app.html
+++ b/Week 4/weatherapp-es6/app.html
@@ -16,6 +16,6 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+<script src="js/app.es6.js"></script>
 </body>
 </html>
